--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
   },
   "homepage": "https://github.com/Vali-98/chatterui-react-native-local-download#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access" : "public"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.6.0",
@@ -109,8 +110,7 @@
       "tagName": "v${version}"
     },
     "npm": {
-      "publish": true,
-      "access" : "public"
+      "publish": true
     },
     "github": {
       "release": true
